first commit after init, a lot of stuff done the way I like it, but still work to do, commiting for demo purposes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,15 +15,19 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "%/*": [
+        "tests/*"
+      ],
+      "!/*": [
+        "/*"
       ]
     }
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
     "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
