--- a/package.json
+++ b/package.json
@@ -1,30 +1,46 @@
 {
-  "name": "vue-firebase-portfolio",
-  "version": "0.1.0",
+  "name": "vue-spa-ts-jest-demo",
+  "description": "",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "fake-rest-api": "json-server --watch db.json"
   },
   "dependencies": {
-    "vue": "^2.5.16",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "axios": "0.18.0",
+    "bulma": "0.7.1",
+    "json-server": "0.12.2",
+    "vue": "2.5.16",
+    "vue-router": "3.0.1",
+    "vuex": "3.0.1",
+    "vuex-typescript": "3.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.1",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.10",
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.10",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.10",
-    "@vue/cli-service": "^3.0.0-beta.10",
-    "@vue/test-utils": "^1.0.0-beta.10",
-    "babel-core": "^7.0.0-0",
-    "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",
-    "ts-jest": "^22.0.1",
-    "vue-template-compiler": "^2.5.13"
+    "@babel/core": "7.0.0-beta.49",
+    "@types/faker": "4.1.2",
+    "@types/jest": "22.2.3",
+    "@vue/cli-plugin-babel": "3.0.0-beta.11",
+    "@vue/cli-plugin-typescript": "3.0.0-beta.11",
+    "@vue/cli-plugin-unit-jest": "3.0.0-beta.11",
+    "@vue/cli-service": "3.0.0-beta.11",
+    "@vue/test-utils": "1.0.0-beta.16",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-loader": "8.0.0-beta.3",
+    "faker": "4.1.0",
+    "flush-promises": "1.0.0",
+    "jest": "23.0.1",
+    "node-sass": "4.9.0",
+    "prettier": "1.13.0",
+    "sass-loader": "7.0.1",
+    "ts-jest": "22.4.6",
+    "tslint-config-prettier": "1.13.0",
+    "typescript": "2.8.3",
+    "vue-template-compiler": "2.5.16",
+    "webpack": "4.9.1"
   },
   "browserslist": [
     "> 1%",
